2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/Item.cs:
	* src/Song.cs:

	Minor cleanups, and deal with Songs and Albums
	in SongWindow and AlbumWindow, not Items, as those
	are what the signals provide.

2005-01-09  Tamara Roberson  <foxxygirltamara@gmail.com>

	* data/glade/AddWindow.glade:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/AddWindowEntry.cs:
	* src/AddWindowList.cs:
	* src/Album.cs:
	* src/Item.cs:
	* src/Makefile.am:
	* src/Song.cs:
	
	Split AddWindowEntry and AddWindowList off of AddWindow.
	Moved Song.FitsCriteria and Album.FitsCriteria to Item.

2005-01-09  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/About.cs:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/Album.cs:
	* src/ErrorDialog.cs:
	* src/FileUtils.cs:
	* src/Global.cs:
	* src/Metadata.cs:
	* src/NotificationAreaIcon.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/PluginManager.cs:
	* src/ProgressWindow.cs:
	* src/StringUtils.cs:
	
	Make all translatable strings readonly variables.
	Minor code cleanup.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:

	Re-mark as "being checked" when loading.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:

	Do not write to the db while loading it.
	
	* src/AddAlbumWindow.cs:

	Only allow dragging in cover images when !CoverDB.Loading.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Forgot to set rq.Album.. oops.. would crash when an album would
	be removed.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:

	Call EmitSongChanged when setting Duration.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Release 0.8.0pre4.
	
	* po/POTFILES.in:
	* src/Makefile.am:
	
	Fix 'make distcheck'.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverGetter.cs:
