@@ -1,3 +1,12 @@
+2005-01-09  Tamara Roberson  <foxxygirltamara@gmail.com>
+	
+	* src/Actions.cs:
+	* src/Global.cs:
+	* src/Makefile.am:
+	* src/PlaylistWindow.cs:
+	
+	Split off Actions from PlaylistWindow.
+
 2005-01-09  Jorn Baayen  <jbaayen@gnome.org>
 
 	* src/AddAlbumWindow.cs:
